--- a/templates/login.html
+++ b/templates/login.html
@@ -130,7 +130,7 @@ span.forgotpsd a {
 </head>
 <body>
     <h1>LILAC Control Panel</h1>
-    <form action="http://0.0.0.0:5000/login" method="post">
+    <form action="{{ url_for('login')}}" method="post">
         
 		<center><p style="font-size: 12px; color:white">{{ msg }}</p></center>
         <!-- Main container for all inputs -->
